refact(TG-11): add unit tests